# sortAI

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml  requirements.txt
config/: config.example.toml
deploy/: README.md
deploy/linux/: sortai.service
deploy/macos/: com.sortai.dashboard.plist
deploy/windows/: install-autostart.ps1  install-nssm-service.bat  sortai-task.xml  start-sortai.bat  start-sortai.ps1  uninstall-autostart.ps1
prompts/: consolidate.md  learn.md  name_file.md  navigate.md  summarize.md
src/sortai/: __main__.py  cli.py  config.py  dashboard_server.py  file_ops.py  folder_navigator.py  llm_client.py  logging_setup.py  memory.py  pdf_reader.py  pipeline.py  processor.py  prompts.py  report.py  review_store.py  tray.py  validator.py  watcher.py
src/sortai/static/: dashboard.css  dashboard.js  index.html
tests/: test_cli.py  test_config.py  test_dashboard_server.py  test_file_ops.py  test_folder_navigator.py  test_llm_client.py  test_logging_setup.py  test_memory.py  test_pdf_reader.py  test_pipeline.py  test_processor.py  test_prompts.py  test_report.py  test_tray.py  test_validator.py  test_watcher.py
tests/config/: config.toml
