[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sortai"
version = "0.1.0"
description = "Sort files into an existing folder structure using an LLM."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "openai>=1.30",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "watchdog>=4.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
sortai = "sortai.cli:main"

[project.gui-scripts]
sortai-tray = "sortai.tray:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
tray = ["pystray>=0.19", "Pillow>=10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
